fix: cargo toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
+
+[workspace]
+members = ["util"]
+
 [package]
 name = "fluisim"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[workspaces]
-members = ["util"]
 
 [dependencies]
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
