--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 
 [workspace]
-members = ["util"]
+members = [ "hydrodynamics", "util"]
 
 [package]
 name = "fluisim"
@@ -11,4 +11,6 @@ edition = "2021"
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 bevy_egui = "0.27.0"
 itertools = "0.13.0"
+
 util = { path = "util" }
+hydrodynamics = { path = "hydrodynamics" }
