--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,9 @@
 
 [workspace]
-members = [ "hydrodynamics", "util"]
+resolver = "2"
 
-[package]
-name = "fluisim"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-bevy = { version = "0.13.2", features = ["dynamic_linking"] }
-bevy_egui = "0.27.0"
-itertools = "0.13.0"
-
-util = { path = "util" }
-hydrodynamics = { path = "hydrodynamics" }
+members = [
+    "fluisim",
+    "hydrodynamics",
+    "util",
+]
